# vad_ex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  checksum-Elixir.VadEx.Native.exs  mix.exs
.github/workflows/: ci.yml  release.yml
bench/: README.md  bench.exs
docs/: architecture.md
lib/: vad_ex.ex
lib/mix/tasks/: vad_ex.fetch_model.ex
lib/vad_ex/: endpointer.ex  native.ex  session.ex  telemetry.ex
lib/vad_ex/membrane/: filter.ex
native/vad_ex/: Cargo.toml
native/vad_ex/src/: lib.rs
priv/models/: .gitkeep
test/: real_audio_test.exs  test_helper.exs
test/corpus/: README.md  bench_ref.py  fetch_corpus.py  golden_real_audio.json  reference_probs.py
test/fixtures/: golden_v6_2.json  tone220_16k_s16le.pcm  utterance_16k_s16le.pcm
test/vad_ex/: endpointer_test.exs  membrane_filter_test.exs  native_test.exs  session_test.exs
